tree-sitter-song/test/corpus/layout.txt
================================================================================
Comments and blank lines
================================================================================

# A song
title "Comments"   # trailing

pattern a
  # inside a body
  C4:q

  D4

track t
  play a

--------------------------------------------------------------------------------

(source_file
  (comment)
  (statement
    (string))
  (comment)
  (pattern_block
    (name)
    (comment)
    (note_line
      (event
        (note)
        (duration)))
    (note_line
      (event
        (note))))
  (track_block
    (name)
    (play_step
      (reference))))

================================================================================
A column-0 comment does not end a block
================================================================================

pattern beat grid=1/16
  kick X...
# the snare
  snare ..X.

--------------------------------------------------------------------------------

(source_file
  (pattern_block
    (name)
    (option
      (key)
      (fraction))
    (grid_row
      (drum)
      (grid_hit)
      (grid_rest))
    (comment)
    (grid_row
      (drum)
      (grid_rest)
      (grid_hit)
      (grid_rest))))

================================================================================
A note name is not a comment
================================================================================

pattern sharp
  C#4:q F#3 # a comment

--------------------------------------------------------------------------------

(source_file
  (pattern_block
    (name)
    (note_line
      (event
        (note)
        (duration))
      (event
        (note))))
  (comment))

================================================================================
Indented lines before any block
================================================================================

  gain 3
tempo 90

--------------------------------------------------------------------------------

(source_file
  (setting
    (setting_name)
    (number))
  (statement
    (number)))

================================================================================
No newline at the end
================================================================================

tempo 90
--------------------------------------------------------------------------------

(source_file
  (statement
    (number)))
