tree-sitter-song/test/corpus/leniency.txt
================================================================================
Unknown top-level word
================================================================================

instr lead
  osc saw
tempo 120

--------------------------------------------------------------------------------

(source_file
  (unknown_block
    (identifier)
    (identifier)
    (setting
      (setting_name)
      (identifier)))
  (statement
    (number)))

================================================================================
Half-typed option
================================================================================

instrument lead synth
  filter lowpass cutoff=
  osc saw

--------------------------------------------------------------------------------

(source_file
  (instrument_block
    (name)
    (instrument_kind)
    (setting
      (setting_name)
      (identifier)
      (option
        (key)))
    (setting
      (setting_name)
      (identifier))))

================================================================================
Stray characters on a body line
================================================================================

track t
  $%& weird (stuff)
  play verse

--------------------------------------------------------------------------------

(source_file
  (track_block
    (name)
    (value_line
      (word)
      (identifier)
      (word))
    (play_step
      (reference))))

================================================================================
Unclosed chord
================================================================================

pattern p
  [C4 E4
  C4:q

--------------------------------------------------------------------------------

(source_file
  (pattern_block
    (name)
    (note_line
      (event
        (chord
          (note)
          (note))))
    (note_line
      (event
        (note)
        (duration)))))

================================================================================
Unterminated string
================================================================================

title "Half
tempo 120

--------------------------------------------------------------------------------

(source_file
  (statement
    (string))
  (statement
    (number)))

================================================================================
Header without a name
================================================================================

pattern
track 3
instrument

--------------------------------------------------------------------------------

(source_file
  (pattern_block)
  (track_block
    (number))
  (instrument_block))
